
2014-03-16: Version 2.1.2

- Updated for vdr-2.1.6.

2014-05-10: Version 2.1.3

- Updated the section filtering options.
- Removed unnecessary TS buffer settings.
- Added RTP packet error detection.


==================================
VDR Plugin 'iptv' Revision History
==================================

2015-02-19: Version 2.2.0

- Updated for vdr-2.2.0.
- Updated German translations (Thanks to Frank Neumann).
- Updated Lithuanian translations (Thanks to Valdemaras
  Pipiras).

2015-04-04: Version 2.2.1

- Fixed CURL timeout and added a stale connection
  detection (Thanks to Daniel Ribeiro).
- Got rid of IPTV_DEBUG.
- Added support for tracing modes.


==================================
VDR Plugin 'iptv' Revision History
==================================

2017-06-24: Version 2.3.0

- Updated for vdr-2.3.7.
- Added Polish translation (Thanks to Tomasz Nowak).
- Added Catalan and Spanish translations (Thanks to Gabriel Bonich).


==================================
VDR Plugin 'iptv' Revision History
==================================

2018-04-15: Version 2.4.0

- Updated for vdr-2.4.0.

==================================
VDR Plugin 'iptv' Revision History
==================================

2024-07-17: Version 2.6.0
- Add new stream protocols RADIO and M3U

2024-07-22: Version 2.6.1
- fix multithreading issue

2024-07-29: Version 2.6.2
- Add new stream protocol STREAM
- set the default thread-queue-size from 8 to 32
- New plugin parameter -s to set the thread-queue-size

2024-08-04: Version 2.6.3
- add new channel parameter H=V or H=F (use FFmpeg or vlc)
- new plugin parameter: -m/--m3u-config-path to set the path for m3u config files

2024-08-15: Version 2.6.4
- add new SVDRP commands LXML, LIPT, CHPA, ADDM, ADDS, ADDR
- some fixes

2024-xx-xx: Version 2.6.5
- improved error handling
- show errors as VDR message
- copied RadioImage from Radio plugin (will be only activated if radio plugin is not found)
- mark channels which cannot be reached with '- 404'