@@ -117,28 +117,34 @@ void printBacktrace() {
 }
 
 void mark404Channel(int channelId) {
+    /*
     std::lock_guard<std::mutex> guard(all404ChannelMutex);
     all404Channels.emplace(channelId);
+    */
 }
 
 void rename404Channels() {
+    /*
     if (all404Channels.empty()) {
         return;
     }
 
     std::lock_guard<std::mutex> guard(all404ChannelMutex);
-    LOCK_CHANNELS_WRITE;
 
     for (auto c : all404Channels) {
-        cChannel *channel = Channels->GetByNumber(c);
+        {
+            LOCK_CHANNELS_WRITE;
+            cChannel *channel = Channels->GetByNumber(c);
 
-        if (channel) {
-            if (!endswith(channel->Name(), CHANNELMARK404)) {
-                channel->SetName(cString::sprintf("%s %s", channel->Name(), CHANNELMARK404),
-                                 channel->ShortName(),
-                                 cString::sprintf("%s %s", CHANNELMARK404, channel->Provider()));
+            if (channel) {
+                if (!endswith(channel->Name(), CHANNELMARK404)) {
+                    channel->SetName(cString::sprintf("%s %s", channel->Name(), CHANNELMARK404),
+                                     channel->ShortName(),
+                                     cString::sprintf("%s %s", CHANNELMARK404, channel->Provider()));
+                }
             }
         }
     }
+    */
 }
 
